[gd_scene load_steps=2 format=3 uid="uid://2m32h5toa3hn"]

[ext_resource type="Script" uid="uid://kqspms8sl6mu" path="res://scripts/painter_upgrade.gd" id="1_2rusf"]

[node name="PainterUpgradeUI" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_2rusf")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Title" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Painter XY"
horizontal_alignment = 1

[node name="ButtonsHbox" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="SpeedUpgr" type="Button" parent="MarginContainer/VBoxContainer/ButtonsHbox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Speed"

[node name="CooldownUpgr" type="Button" parent="MarginContainer/VBoxContainer/ButtonsHbox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "CD"

[node name="CreditsUpgr" type="Button" parent="MarginContainer/VBoxContainer/ButtonsHbox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Credits"

[connection signal="pressed" from="MarginContainer/VBoxContainer/ButtonsHbox/SpeedUpgr" to="." method="_on_speed_upgr_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ButtonsHbox/CooldownUpgr" to="." method="_on_cooldown_upgr_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ButtonsHbox/CreditsUpgr" to="." method="_on_credits_upgr_pressed"]
